--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -18,6 +18,7 @@
       <PackageReference Include="MediatR.Extensions.FluentValidation.AspNetCore" Version="4.0.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
